updated socials links

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <header class="flex justify-between items-center p-6">
         <img src="./public/datathon_nobackground.png" alt="Logo" class="h-12 ml-8">
         <div class="flex">
-            <a href="#">
+            <a href="https://www.facebook.com/datathonanalytics">
                 <img src="./public/facebook.png" alt="Facebook" class="h-6 mr-8">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/datathonevents/">
                 <img src="./public/instagram.png" alt="Instagram" class="h-6 mr-8">
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/company/datathon/">
                 <img src="./public/linkedin.png" alt="LinkedIn" class="h-6 mr-8">
             </a>
         </div>
@@ -160,13 +160,13 @@
             </a>
         </div>        
         <div class="flex justify-center m-1 pt-5 pb-5">
-            <a href="#">
+            <a href="https://www.facebook.com/datathonanalytics">
                 <img src="./public/facebook.png" alt="Facebook" class="h-6 mr-8">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/datathonevents/">
                 <img src="./public/instagram.png" alt="Instagram" class="h-6 mr-8">
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/company/datathon/">
                 <img src="./public/linkedin.png" alt="LinkedIn" class="h-6 mr-8">
             </a>
         </div>
