--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         </div>
 
         <div class="grid grid-cols-2 gap-6 justify-items-center">               
-            <img src="./public/conftalk1.JPG" alt="Image 2" class="h-auto w-3/4 rounded-lg">
-            <img src="./public/conftalk2.JPG" alt="Image 2" class="h-auto w-3/4 rounded-lg">
-            <img src="./public/conftalk3.JPG" alt="Image 2" class="h-auto w-3/4 rounded-lg">
-            <img src="./public/lunch.JPG" alt="Image 2" class="h-auto w-3/4 rounded-lg">                 
+            <img src="./public/conftalk1.JPG" alt="Conference 1" class="h-auto w-3/4 rounded-lg">
+            <img src="./public/conftalk2.JPG" alt="Conference 2" class="h-auto w-3/4 rounded-lg">
+            <img src="./public/conftalk3.JPG" alt="Conference 3" class="h-auto w-3/4 rounded-lg">
+            <img src="./public/lunch.JPG" alt="Conference 4" class="h-auto w-3/4 rounded-lg">                 
         </div>
 
     </section>
@@ -107,10 +107,10 @@
         </div>
 
         <div class="grid grid-cols-2 gap-6 gap-x-2 justify-items-center ">               
-            <img src="./public/workshop1.JPG" alt="Image 2" class="h-auto w-3/4 rounded-lg">
-            <img src="./public/workshop3.jpg" alt="Image 2" class="h-auto w-3/4 rounded-lg">
-            <img src="./public/workshop2.JPG" alt="Image 2" class="h-auto w-3/4 rounded-lg">
-            <img src="./public/workshop4.jpg" alt="Image 2" class="h-auto w-3/4 rounded-lg">                 
+            <img src="./public/workshop1.JPG" alt="Workshop 1" class="h-auto w-3/4 rounded-lg">
+            <img src="./public/workshop3.jpg" alt="Workshop 2" class="h-auto w-3/4 rounded-lg">
+            <img src="./public/workshop2.JPG" alt="Workshop 3" class="h-auto w-3/4 rounded-lg">
+            <img src="./public/workshop4.jpg" alt="Workshop 4" class="h-auto w-3/4 rounded-lg">                 
         </div>
 
     </section>
