--- a/index.html
+++ b/index.html
@@ -82,16 +82,20 @@
                 Conferences
             </p>
             <p class="pr-20 pl-20 pt-5 pb-5">
-                Our <a class="underline decoration-red-500">Datathon Analytics Conferences</a> 
-                have brought industry leaders to share their knowledge and experience with 
-                <a class="underline decoration-sky-500">over 1000</a> future data scientists.
+                Our <a class="underline decoration-red-500">Conferences</a> 
+                 brought data leaders together to share their knowledge and experience with 
+                <a class="underline decoration-sky-500">1000+</a> future data scientists.
             </p>
             <p class="pr-20 pl-20 pt-5 pb-20">
-                Past speakers have included data scientists, analysts, and data leaders from companies like
-                <a class="underline decoration-emerald-500">Shopify</a>, 
+                Past speakers have included data scientists, analysts, and data people from organizations like
+                <a class="underline decoration-emerald-500">Shopify</a>,             
                 <a class="underline decoration-blue-600">RBC</a>, 
-                <a class="underline decoration-yellow-500">Micsorsoft</a>, 
-                <a class="underline decoration-red-500">IBM</a> 
+                <a class="underline decoration-yellow-500">Microsoft</a>, 
+                <a class="underline decoration-red-500">IBM</a>,
+                <a class="underline decoration-emerald-500">General Electric</a>,             
+                <a class="underline decoration-blue-600">The Co-operators</a>,
+                <a class="underline decoration-yellow-500">Hedge Funds</a>,
+                <a class="underline decoration-red-500">The Ontario Government</a>
                 and many more.
             </p>
         </div>
@@ -113,21 +117,34 @@
                 Workshops & Case Competitions
             </p>
             <p class="pr-20 pl-20 pt-10 pb-5">
-                Our industry led 
+                Industry led 
                 <a class="underline decoration-red-500">Workshops</a> and 
                 <a class="underline decoration-red-500">Case Competitions</a> have 
                 given students the opportunity to learn from the best in 
                 the field and gain interships in the process.
             </p>
+            <div class="border-b border-gray-300 my-4"></div>
             <p class="pr-20 pl-20 p-5">
-                Past workshops have taught students the basics of working with data in languages like
+                Past <a class="underline decoration-red-500">Workshops</a> have taught students the basics of working with data in languages like
                 <a class="underline decoration-yellow-500">Python</a>, 
-                <a class="underline decoration-blue-500">R</a>, and 
-                <a class="underline decoration-green-500">SQL</a>.
+                <a class="underline decoration-blue-500">R</a>,
+                <a class="underline decoration-green-500">Excel</a>, 
+                <a class="underline decoration-yellow-500">SQL</a>, and data tools like 
+                <a class="underline decoration-blue-500">PowerBI</a>, and 
+                <a class="underline decoration-green-500">MicroStrategy</a>. 
             </p>
+            <p class="pr-20 pl-20 p-5">
+                Students were given hands on learning with 
+                <a class="underline decoration-yellow-500">Machine Learning</a>, 
+                <a class="underline decoration-blue-500">Data Analytics</a>, 
+                <a class="underline decoration-red-500">Data Visualization</a>, and 
+                <a class="underline decoration-green-500">Financial Modeling</a> 
+                by people who apply these skills everyday.
+            </p>
+            <div class="border-b border-gray-300 my-4"></div>                        
             <p class="pr-20 pl-20 pt-5 pb-20">
-                We've also had classes and case competitions focused on teaching students how to use
-                data to tell stories, apply machine learning to real problems, and create effective visualizations.
+                Our <a class="underline decoration-red-500">Case Competitions</a> were built based on the needs of our partner-organizations
+                and helped match the top students with internship opportunities at these organizations.
             </p>
         </div>
 
