--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <p class="pr-40 pl-40 p-5">
                 After 5 years of running Datathon events, we've had the opportunity to work with some amazing people. 
                 Unfortunately, we've decided to take a break from running events for the time being. We hope to be back in the future!
-                We'd like to thank all our supports and sponsors for helping us make these events possible.
+                We'd like to thank all our supporters and sponsors for helping us make these events possible.
                 We'd also like to thank all the students who have participated in our events and helped make them a success.
                 Watch our social media for updates on future events!
             </p>            
