--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
                 <a class="underline decoration-red-500">IBM</a>,
                 <a class="underline decoration-emerald-500">General Electric</a>,             
                 <a class="underline decoration-blue-600">The Co-operators</a>,
-                <a class="underline decoration-yellow-500">Hedge Funds</a>,
-                <a class="underline decoration-red-500">The Ontario Government</a>
+                <a class="underline decoration-yellow-500">Deloitte</a>,
+                <a class="underline decoration-red-500">CIBC</a>,
+                <a class="underline decoration-emerald-500">The Ontario Government</a>,             
+                <a class="underline decoration-blue-600">KPMG</a>,              
+                <a class="underline decoration-yellow-500">Environics Analytics</a>,
+                <a class="underline decoration-red-500">AECON</a>,
                 and many more.
             </p>
         </div>
