--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
                 We'd like to thank all our supporters and sponsors for helping us make these events possible.
                 We'd also like to thank all the students who have participated in our events and helped make them a success.
                 Watch our social media for updates on future events!
+
+                Extra thanks to our #1 supporters at <a class="underline decoration-green-500" href="https://informediteration.com/">Informed Iteration!</a>
             </p>            
             <div class="flex justify-center pt-10">
                 <img src="./public/team.JPG" alt="Datathon Team" class="h-auto w-1/2 rounded-full">                
